@@ -26,12 +26,17 @@
 
 static char	prompt_char = '\0';
 
-static int	telnet_waitsocket(int socket_fd, int mode/* 1 - read; 0 - write */)
+#define	WAIT_READ	0
+#define	WAIT_WRITE	1
+
+static int	telnet_waitsocket(int socket_fd, int mode)
 {
-/*	const char	*__function_name = "telnet_waitsocket"; */
+	const char	*__function_name = "telnet_waitsocket";
 	struct timeval	tv;
 	int		rc;
-	fd_set		fd, *writefd = NULL, *readfd = NULL;
+	fd_set		fd, *readfd = NULL, *writefd = NULL;
+
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	tv.tv_sec = 0;
 	tv.tv_usec = 100000;	/* 1/10 sec. */
@@ -39,58 +44,92 @@ static int	telnet_waitsocket(int socket_fd, int mode/* 1 - read; 0 - write */)
 	FD_ZERO(&fd);
 	FD_SET(socket_fd, &fd);
 
-	if (1 == mode)
+	if (WAIT_READ == mode)
 		readfd = &fd;
 	else
 		writefd = &fd;
 
+	/* -1 - error			*/
+	/*  0 - nothing changed		*/
+	/*  1 - read/write possible	*/
 	rc = select(socket_fd + 1, readfd, writefd, NULL, &tv);
 
-/*	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, rc); */
+	if (-1 == rc)
+		zabbix_log(LOG_LEVEL_DEBUG, "%s() rc:%d errno:%d error:[%s]", __function_name, rc, errno, strerror(errno));
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, rc);
 
 	return rc;
 }
 
 static ssize_t	telnet_socket_read(int socket_fd, void *buf, size_t count)
 {
-/*	const char	*__function_name = "telnet_socket_read"; */
+	const char	*__function_name = "telnet_socket_read";
 	ssize_t		rc;
+
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	while (-1 == (rc = read(socket_fd, buf, count)))
 	{
+		zabbix_log(LOG_LEVEL_DEBUG, "%s() rc:%d errno:%d error:[%s]", __function_name, rc, errno, strerror(errno));
+
 		if (errno == EAGAIN)
 		{
-			if (0 >= (rc = telnet_waitsocket(socket_fd, count)))
-				break;
+			/* Wait a bit. If there is still an error or there is no error, but still */
+			/* no input available, we assume the other side has nothing more to say.  */
+			if (0 >= (rc = telnet_waitsocket(socket_fd, WAIT_READ)))
+				goto ret;
+
 			continue;
 		}
+
 		break;
 	}
 
-/*	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, rc); */
+	/* when read() returns 0, it means EOF */
+	/* let's consider it a permanent error */
+	/* note that if telnet_waitsocket() is */
+	/* zero, it is not a permanent condition */
+	if (0 == rc)
+		rc = -1;
+
+ret:
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, rc);
 
 	return rc;
 }
 
 static ssize_t	telnet_socket_write(int socket_fd, const void *buf, size_t count)
 {
-/*	const char	*__function_name = "telnet_socket_write"; */
+	const char	*__function_name = "telnet_socket_write";
 	ssize_t		rc;
+
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	while (-1 == (rc = write(socket_fd, buf, count)))
 	{
+		zabbix_log(LOG_LEVEL_DEBUG, "%s() rc:%d errno:%d error:[%s]", __function_name, rc, errno, strerror(errno));
+
 		if (errno == EAGAIN)
 		{
-			telnet_waitsocket(socket_fd, 0);
+			telnet_waitsocket(socket_fd, WAIT_WRITE);
 			continue;
 		}
+
 		break;
 	}
 
-/*	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, rc); */
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, rc);
 
 	return rc;
 }
+
+#define	CMD_IAC		255
+#define	CMD_WILL	251
+#define	CMD_WONT	252
+#define	CMD_DO		253
+#define	CMD_DONT	254
+#define	OPT_SGA		3
 
 /*
  * Read data from the telnet server.
@@ -109,36 +148,52 @@ static ssize_t	telnet_read(int socket_fd, char *buf, size_t *buf_left, size_t *b
 		if (1 != (rc = telnet_socket_read(socket_fd, &c1, 1)))
 			break;
 
+		zabbix_log(LOG_LEVEL_DEBUG, "%s() c1:[%x=%c]", __function_name, c1, isprint(c1) ? c1 : ' ');
+
 		switch (c1) {
-		case 255:	/* Interpret as Command (IAC) */
+		case CMD_IAC:
 			while (0 == (rc = telnet_socket_read(socket_fd, &c2, 1)))
 				;
 
 			if (-1 == rc)
 				goto end;
 
-			switch (c2){
-			case 255: 	/* Only the IAC need be doubled to be sent as data */
+			zabbix_log(LOG_LEVEL_DEBUG, "%s() c2:%x", __function_name, c2);
+
+			switch (c2) {
+			case CMD_IAC: 	/* Only IAC needs to be doubled to be sent as data */
 				if (*buf_left > 0)
 				{
 					buf[(*buf_offset)++] = (char)c2;
 					(*buf_left)--;
 				}
 				break;
-			case 251:	/* Option code (WILL) */
-			case 252:	/* Option code (WON'T) */
-			case 253:	/* Option code (DO) */
-			case 254:	/* Option code (DON'T) */
-				/* reply to all commands with "WONT", unless it is SGA (suppres go ahead) */
+			case CMD_WILL:
+			case CMD_WONT:
+			case CMD_DO:
+			case CMD_DONT:
 				while (0 == (rc = telnet_socket_read(socket_fd, &c3, 1)))
 					;
 
 				if (-1 == rc)
 					goto end;
 
-				c = 255;
-				telnet_socket_write(socket_fd, &c, 1);	/* IAC */
-				c = (c2 == 253) ? 252 : 254; /* DO ? WON'T : DON'T */
+				zabbix_log(LOG_LEVEL_DEBUG, "%s() c3:%x", __function_name, c3);
+
+				/* reply to all options with "WONT" or "DONT", */
+				/* unless it is Suppress Go Ahead (SGA)        */
+
+				c = CMD_IAC;
+				telnet_socket_write(socket_fd, &c, 1);
+
+				if (CMD_WONT == c2)
+					c = CMD_DONT; /* the only valid response */
+				else if (CMD_DONT == c2)
+					c = CMD_WONT; /* the only valid response */
+				else if (OPT_SGA == c3)
+					c = (c2 == CMD_DO ? CMD_WILL : CMD_DO);
+				else
+					c = (c2 == CMD_DO ? CMD_WONT : CMD_DONT);
 
 				telnet_socket_write(socket_fd, &c, 1);
 				telnet_socket_write(socket_fd, &c3, 1);
@@ -165,35 +220,56 @@ end:
 /*
  * Convert CR+LF to Unix LF and clear CR+NUL
  */
-static void	unix_eol(char *buf, size_t *offset)
+static void	convert_telnet_to_unix_eol(char *buf, size_t *offset)
 {
-	size_t	i, sz;
+	size_t	i, sz = *offset, new_offset;
 
-	if (*offset == 0)
-		return;
+	new_offset = 0;
 
-	sz = *offset - 1;
-
-	for (i = 0; i < *offset - 1; i++)
+	for (i = 0; i < sz; i++)
 	{
-		if ((buf[i] == '\r' && buf[i + 1] == '\n'))	/* CR+LF (Windows) */
+		if (i + 1 < sz && buf[i] == '\r' && buf[i + 1] == '\n')		/* CR+LF (Windows) */
 		{
-			buf[i] = '\n';	/* LF (Unix) */
-			(*offset)--; i++;
-			memmove(&buf[i], &buf[i + 1], (*offset - i) * sizeof(char));
+			buf[new_offset++] = '\n';
+			i++;
 		}
-		if (buf[i] == '\r' && buf[i + 1] == '\0')	/* CR+NUL */
+		else if (i + 1 < sz && buf[i] == '\r' && buf[i + 1] == '\0')	/* CR+NUL */
 		{
-			*offset -= 2;
-			memmove(&buf[i], &buf[i + 2], (*offset - i) * sizeof(char));
+			i++;
 		}
-		if ((buf[i] == '\n' && buf[i + 1] == '\r'))	/* LF+CR */
+		else if (i + 1 < sz && buf[i] == '\n' && buf[i + 1] == '\r')	/* LF+CR */
 		{
-			(*offset)--; i++;
-			memmove(&buf[i], &buf[i + 1], (*offset - i) * sizeof(char));
+			buf[new_offset++] = '\n';
+			i++;
 		}
-		else if (buf[i] == '\r')	/* CR */
-			buf[i] = '\n';	/* LF (Unix) */
+		else if (buf[i] == '\r')					/* CR */
+		{
+			buf[new_offset++] = '\n';
+		}
+		else
+			buf[new_offset++] = buf[i];
+	}
+
+	*offset = new_offset;
+}
+
+static void	convert_unix_to_telnet_eol(const char *buf, size_t offset, char *out_buf, size_t *out_offset)
+{
+	size_t	i;
+	
+	*out_offset = 0;
+
+	for (i = 0; i < offset; i++)
+	{
+		if (buf[i] != '\n')
+		{
+			out_buf[(*out_offset)++] = buf[i];
+		}
+		else
+		{
+			out_buf[(*out_offset)++] = '\r';
+			out_buf[(*out_offset)++] = '\n';
+		}
 	}
 }
 
@@ -206,23 +282,27 @@ static char	telnet_lastchar(const char *buf, size_t offset)
 	return '\0';
 }
 
-static void	telnet_rm_echo(char *buf, size_t *offset, const char *echo, size_t len)
+static int	telnet_rm_echo(char *buf, size_t *offset, const char *echo, size_t len)
 {
 	if (0 == memcmp(buf, echo, len))
 	{
 		*offset -= len;
 		memmove(&buf[0], &buf[len], *offset * sizeof(char));
+		
+		return SUCCEED;
 	}
+	else
+		return FAIL;
 }
 
 static void	telnet_rm_prompt(const char *buf, size_t *offset)
 {
-	if (*offset == 0)
-		return;
-
-	while ((*offset)-- > 0)
-		if (buf[*offset] == '\n')
+	while (*offset > 0)
+	{
+		(*offset)--;
+		if (buf[*offset] == prompt_char)
 			break;
+	}
 }
 
 static int	telnet_login(int socket_fd, const char *username,
@@ -241,7 +321,7 @@ static int	telnet_login(int socket_fd, const char *username,
 		if (':' == telnet_lastchar(buf, offset))
 			break;
 
-	unix_eol(buf, &offset);
+	convert_telnet_to_unix_eol(buf, &offset);
 	zabbix_log(LOG_LEVEL_DEBUG, "%s() login prompt:'%.*s'",
 			__function_name, offset, buf);
 
@@ -260,7 +340,7 @@ static int	telnet_login(int socket_fd, const char *username,
 		if (':' == telnet_lastchar(buf, offset))
 			break;
 
-	unix_eol(buf, &offset);
+	convert_telnet_to_unix_eol(buf, &offset);
 	zabbix_log(LOG_LEVEL_DEBUG, "%s() password prompt:'%.*s'",
 			__function_name, offset, buf);
 
@@ -282,7 +362,7 @@ static int	telnet_login(int socket_fd, const char *username,
 			break;
 		}
 
-	unix_eol(buf, &offset);
+	convert_telnet_to_unix_eol(buf, &offset);
 	zabbix_log(LOG_LEVEL_DEBUG, "%s() prompt:'%.*s'",
 			__function_name, offset, buf);
 
@@ -304,13 +384,26 @@ static int	telnet_execute(int socket_fd, const char *command,
 		AGENT_RESULT *result, const char *encoding)
 {
 	const char	*__function_name = "telnet_execute";
-	char	buf[MAX_BUF_LEN];
-	size_t	sz, offset;
-	int	rc, ret = FAIL;
+	char		buf[MAX_BUF_LEN];
+	size_t		sz, offset;
+	int		rc, ret = FAIL;
+	char		*command_lf = NULL, *command_crlf = NULL;
+	size_t		i, offset_lf, offset_crlf;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
-	telnet_socket_write(socket_fd, command, strlen(command));
+	/* `command' with multiple lines may contain CR+LF from the browser;	*/
+	/* it should be converted to plain LF to remove echo later on properly	*/
+	offset_lf = strlen(command);
+	command_lf = zbx_malloc(command_lf, offset_lf + 1);
+	zbx_strlcpy(command_lf, command, offset_lf + 1);
+	convert_telnet_to_unix_eol(command_lf, &offset_lf);
+
+	/* telnet protocol requires that end-of-line is transferred as CR+LF	*/
+	command_crlf = zbx_malloc(command_crlf, offset_lf * 2 + 1);
+	convert_unix_to_telnet_eol(command_lf, offset_lf, command_crlf, &offset_crlf);
+
+	telnet_socket_write(socket_fd, command_crlf, offset_crlf);
 	telnet_socket_write(socket_fd, "\r\n", 2);
 
 	sz = sizeof(buf);
@@ -319,7 +412,7 @@ static int	telnet_execute(int socket_fd, const char *command,
 		if (prompt_char == telnet_lastchar(buf, offset))
 			break;
 
-	unix_eol(buf, &offset);
+	convert_telnet_to_unix_eol(buf, &offset);
 	zabbix_log(LOG_LEVEL_DEBUG, "%s() command output:'%.*s'",
 			__function_name, offset, buf);
 
@@ -331,9 +424,28 @@ static int	telnet_execute(int socket_fd, const char *command,
 		goto fail;
 	}
 
-	telnet_rm_echo(buf, &offset, command, strlen(command));
+	telnet_rm_echo(buf, &offset, command_lf, offset_lf);
+
+	/* multi-line commands may have returned additional prompts;	*/
+	/* this is not a perfect solution, because in case of multiple	*/
+	/* multi-line shell statements these prompts might appear in	*/
+	/* the middle of the output, but we still try to be helpful by	*/
+	/* removing additional prompts at least from the beginning	*/
+	for (i = 0; i < offset_lf; i++)
+		if (command_lf[i] == '\n')
+			if (SUCCEED != telnet_rm_echo(buf, &offset, "$ ", 2) &&
+				SUCCEED != telnet_rm_echo(buf, &offset, "# ", 2) &&
+				SUCCEED != telnet_rm_echo(buf, &offset, "> ", 2) &&
+				SUCCEED != telnet_rm_echo(buf, &offset, "% ", 2))
+			{
+				break;
+			}
+
 	telnet_rm_echo(buf, &offset, "\n", 1);
 	telnet_rm_prompt(buf, &offset);
+
+	zabbix_log(LOG_LEVEL_DEBUG, "%s() stripped command output:'%.*s'",
+			__function_name, offset, buf);
 
 	if (MAX_BUF_LEN == offset)
 		offset--;
@@ -343,13 +455,18 @@ static int	telnet_execute(int socket_fd, const char *command,
 
 	ret = SUCCEED;
 fail:
+	zbx_free(command_lf);
+	zbx_free(command_crlf);
+
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%s", __function_name,
 			zbx_result_string(ret));
 
 	return ret;
 }
 
-/* Example telnet.run["ls /"] */
+/*
+ * Example: telnet.run["ls /"]
+ */
 static int	telnet_run(DC_ITEM *item, AGENT_RESULT *result, const char *encoding)
 {
 	const char	*__function_name = "telnet_run";
